--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "redux-form": "^8.3.8",
+    "redux-thunk": "^2.4.0",
     "typescript": "^4.1.2",
     "uuid": "^3.4.0",
     "web-vitals": "^1.0.1"
@@ -48,6 +50,7 @@
   },
   "devDependencies": {
     "@types/faker": "^5.5.8",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "@types/redux-form": "^8.3.3"
   }
 }
