--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.4",
     "faker": "^5.5.3",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -21,6 +22,7 @@
     "redux": "^4.1.0",
     "redux-form": "^8.3.8",
     "redux-thunk": "^2.4.0",
+    "reselect": "^4.1.5",
     "typescript": "^4.1.2",
     "uuid": "^3.4.0",
     "web-vitals": "^1.0.1"
