--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "homepage": "https://mikro888.github.io/Social-Network/"
   },
   "eslintConfig": {
     "extends": [
