--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mikro888.github.io/Social-Network/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -12,7 +13,6 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.4",
     "faker": "^5.5.3",
-    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -31,8 +31,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "homepage": "https://mikro888.github.io/Social-Network/"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +54,7 @@
   "devDependencies": {
     "@types/faker": "^5.5.8",
     "@types/react-router-dom": "^5.1.7",
-    "@types/redux-form": "^8.3.3"
+    "@types/redux-form": "^8.3.3",
+    "gh-pages": "^3.2.3"
   }
 }
